# Manas

./: .replit  pyproject.toml  replit.md  setup.sh
attached_assets/: Prompt_untuk_Replit_Agent__Migrasi_dan_Jalankan_Pr_1771738764610.md
backend/: requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/domain/models/: memory.py
backend/app/domain/services/agents/: base.py
backend/app/infrastructure/storage/: mongodb.py  redis.py
frontend/: vite.config.ts
sandbox/app/services/: supervisor.py
