[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "async-lru>=2.2.0",
    "beanie>=2.0.1",
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.5",
    "email-validator>=2.3.0",
    "fastapi>=0.129.2",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "mcp>=1.26.0",
    "motor>=3.7.1",
    "openai>=2.21.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.11.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "redis>=7.2.0",
    "rich>=14.3.3",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
